--- a/microblog/app/templates/index.html
+++ b/microblog/app/templates/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>{{ title }} - Microblog</title>
-    </head>
-    <body>
-        <h1>Hello, {{ user.username }}!</h1>
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+    <h1>Hello, {{ user.username }}!</h1>
+
+    {% for post in posts %}
+        <div><p>{{ post.author.username }} : <b>{{ post.body }}</b> </p></div>
+    {% endfor %}
+
+{% endblock %}
