--- a/microblog/app/templates/index.html
+++ b/microblog/app/templates/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        {% if expression %}
+                blockofcode
+        {% endif %}
+        
+
+        {% if title %}
+
+        {% endif %}
         <title>{{ title }} - Microblog</title>
     </head>
     <body>
